@@ -1,4 +1,5 @@
 0.07
+ - Add new tests for multiple escaped characters in input data.
 
 0.06 2013-09-21
  - Add LICENSE file.
